gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21508_2.d
version https://git-lfs.github.com/spec/v1
oid sha256:eaa63c3be2c7bdb9b9861e624f8ae783bc61412e5e47d9c6c5c6751f2e1bf2de
size 250
